--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/00f2deded2.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Ecommerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
